--- a/zoneless-calculator/package.json
+++ b/zoneless-calculator/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
+    "test": "ng test --no-watch --no-progress --browsers=ChromeHeadless",
+    "test:coverage": "ng test --code-coverage",
     "build:css": "tailwindcss build src/styles.css -o src/output.css"
   },
   "private": true,
