Add polyfills for zone.js to angular.json configuration

--- a/zoneless-calculator/angular.json
+++ b/zoneless-calculator/angular.json
@@ -16,7 +16,7 @@
             "outputPath": "dist/zoneless-calculator",
             "index": "src/index.html",
             "browser": "src/main.ts",
-            "polyfills": [],
+            "polyfills": ["zone.js", "zone.js/testing"],
             "tsConfig": "tsconfig.app.json",
             "assets": [
               {
