--- a/pokemon-ssr/angular.json
+++ b/pokemon-ssr/angular.json
@@ -31,7 +31,7 @@
               "routesFile": "routes.txt"
             },
             "ssr": {
-              "entry": "src/server.ts"
+              "entry": "server.ts"
             }
           },
           "configurations": {
