feat(server): integrate serverless-http for Netlify Functions support chore(netlify): update build command and redirect configuration chore(package): add serverless-http dependency

--- a/pokemon-ssr/netlify.toml
+++ b/pokemon-ssr/netlify.toml
@@ -1,9 +1,9 @@
 [build]
-  command = "npm run build && npm run serve:ssr:pokemon-ssr"
+  command = "npm run build"
   publish = "dist/pokemon-ssr/browser"
   functions = "dist/pokemon-ssr/server"
 
 [[redirects]]
   from = "/*"
-  to = "/index.html"
+  to = "/.netlify/functions/server"
   status = 200
