--- a/pokemon-ssr/package.json
+++ b/pokemon-ssr/package.json
@@ -22,7 +22,7 @@
     "@angular/platform-server": "^18.1.0",
     "@angular/router": "^18.1.0",
     "@angular/ssr": "^18.2.19",
-    "express": "^4.21.2",
+    "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "serverless-http": "^3.2.0",
     "tslib": "^2.3.0",
@@ -32,6 +32,7 @@
     "@angular-devkit/build-angular": "^18.1.1",
     "@angular/cli": "^18.1.1",
     "@angular/compiler-cli": "^18.1.0",
+    "@netlify/angular-runtime": "^2.3.1",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
