feat: implement GitHub issues and labels fetching with error handling

--- a/github-issues-tanstack/.gitignore
+++ b/github-issues-tanstack/.gitignore
@@ -30,13 +30,14 @@ yarn-error.log
 
 # Miscellaneous
 /.angular/cache
+/.angular
 .sass-cache/
 /connect.lock
 /coverage
 /libpeerconnection.log
 testem.log
 /typings
-/environments
+/src/environments
 
 # System files
 .DS_Store
